# device-backend

./: BULLER.py  CHANGELOG.md  EEPROM.py  FOCUS.py  LED.py  OLED.py  PUMP.py  README.md
.github/workflows/: control-build.yml  merge-gatekeeper.yml  processing-segmenter-build.yml
control/: README.md  main.py  pyproject.toml
control/adafruithat/: main.py
control/adafruithat/planktoscope/camera/: hardware.py  mjpeg.py  mqtt.py
control/adafruithat/planktoscope/imagernew/: __init__.py  camera.py  mjpeg.py  mqtt.py  picam_streamer.py  picam_threading.py  picamera.py  state_machine.py  stopflow.py  streams.py  test_preview.py  test_streamer.py
control/planktoscopehat/: main.py
control/planktoscopehat/planktoscope/: focus.py  light.py  module.py  mqtt.py  pump.py  stepper.py
control/planktoscopehat/planktoscope/camera/: hardware.py  mjpeg.py  mqtt.py
control/planktoscopehat/planktoscope/eeprom/: eeprom.py  mqtt.py
control/planktoscopehat/planktoscope/imager/: __init__.py
control/planktoscopehat/planktoscope/imagernew/: mqtt.py
control/planktoscopehat/shush/: board.py  motor.py
control/pscopehat/: main(thread).py  main.py  main_thread.py
control/pscopehat/planktoscope/: light.py
control/pscopehat/planktoscope/camera/: hardware.py  mjpeg.py  mqtt.py
control/pscopehat/planktoscope/imagernew/: __init__.py  camera.py  mjpeg.py  mqtt.py  picam_streamer.py  picam_threading.py  picamera.py  state_machine.py  stopflow.py  streams.py  test_preview.py  test_streamer.py
processing/segmenter/: Dockerfile  apt-packages  main.py  pyproject.toml
processing/segmenter/planktoscope/segmenter/: __init__.py  ecotaxa.py
